# btest

./: .gitignore  CMakeLists.txt  README  rename.sh
codelite/: btest.project  btest.workspace
deployment/: build_mingw.sh
src/: main.cpp
